@@ -1,3 +1,9 @@
+2014-10-29  Eli Zaretskii  <eliz@gnu.org>
+
+	* progmodes/compile.el (compilation-start): If
+	compilation-scroll-output is non-nil, don't force window-start of
+	the compilation buffer to be at beginning of buffer.  (Bug#18874)
+
 2014-10-23  Tassilo Horn  <tsdh@gnu.org>
 
 	* doc-view.el (doc-view-open-text): View the document's plain text
